# chess_engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.org
.github/workflows/: cmake.yml
cmake/: CompilerOptions.cmake
engine/: CMakeLists.txt
engine/include/: attack_table.h  attack_table.hpp  bitboard.h  bitboard.hpp  encoding.hpp  evaluation.hpp  game_state.h  game_state.hpp  make_move.hpp  move_generation.hpp  move_list.hpp  moves.hpp  perft.hpp  prng.h  prng.hpp  time.hpp  types.h  types.hpp  uci.hpp
engine/src/: attack_table.cpp  attack_table.h  bitboard.cpp  bitboard.h  evaluation.cpp  game_state.cpp  main.cpp  make_move.cpp  move_generation.cpp  moves.cpp  perft.cpp  prng.cpp  relevant_bits.h  uci.cpp
example/: CMakeLists.txt
example/src/: main.cpp
test/: CMakeLists.txt
test/src/: t_attack_table.cpp
